# phylotreelib

./: .coverage  .gitattributes  .gitignore  20211110074114.md  CHANGELOG.md  CITATION.cff  LICENSE  README.md  phylotreelib.py  pyproject.toml  setup.cfg  setup.py  treelib.py  x
docs/: api.md  recipes.md  recipes.updated.md
tests/: bip_mean_var.txt  conftest.py  contest.nexus.con.tre  contest.nexus.parts  contest.nexus.tstat  contest.nexus.vstat  contest.postburnin.1.t  contest.postburnin.2.t  copy.nexus.con  copy.nexus.parts  copy.nexus.run1.t  copy.nexus.run2.t  copy.nexus.trprobs  large_phylip_distmatrix.txt  parsemb.py  test_phylotreelib.py  test_phylotreelib_combined.py  test_phylotreelib_pytestversion.py  test_sumt_biplen_reference.py  test_treelib.py  testsumt.nexus.250.t  testsumt.nexus.con.tre  testsumt.nexus.parts  testsumt.nexus.trprobs  testsumt.nexus.vstat
tests/data/: large_distmat.tsv  large_njtree.txt  large_upgmatree.txt  primate-mtDNA.trees  random_10tips_1000.hip  random_10tips_1000.mcc  random_10tips_1000.mrhip  random_10tips_1000.treeannot_hipstr_mean  random_10tips_1000.treeannot_mcc_ca  random_10tips_1000.treeannot_mcc_mean  random_10tips_1000.treeannot_mrhipstr_mean  test
tests/data/beast/: random_10tips_1000.trees
tests/data/mrbayes/: contest.nexus.trprobs  neanderthal.nexus.run1.t
