[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "phylotreelib"
version = "2.2.0"
description = "Analyze and manipulate phylogenetic trees"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy"]
authors = [
    {name = "Anders Gorm Pedersen", email = "agpe@dtu.dk"}
]
license = "GPL-3.0-only"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/agormp/phylotreelib"

[tool.setuptools]
py-modules = ["phylotreelib"]