[metadata]
name = phylotreelib
version = 1.8.0
author = Anders Gorm Pedersen
author_email = agpe@dtu.dk
description = Analyze and manipulate phylogenetic trees
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/agormp/phylotreelib
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
py_modules = phylotreelib
python_requires = >=3.6
install_requires =
	numpy
	sequencelib
